<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">数字绿州</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_shop_find">ShopFindActivity</string>
    <string name="no_network_tips">网络连接失败,请检查后重试</string>
    <string name="service_failure_tips">服务器错误</string>
    <string name="find_shop_detail">搜索</string>
    <string name="find_hot_detail">热门搜索</string>
    <string name="find_hot_detail_history">搜索历史</string>
    <string name="find_shop_input">输入关键词进行搜索</string>
    <string name="login_phone">请输入手机号</string>
    <string name="login_code">请输入验证码</string>
    <string name="action_settings">Settings</string>
    <string name="text_search">搜索</string>
    <string name="text_search_good">搜索产品</string>
    <string name="loading">数据加载中...</string>
    <string name="load_failed">加载失败,请重新加载</string>
    <string name="text_my_order">我的订单</string>
    <string name="text_refund">退款售后</string>
    <string name="text_check_logistics">查看物流</string>
    <string name="text_apply_after_sale">申请售后</string>
    <string name="text_submit">提交</string>
    <string name="text_home_coupon_exchange">省券换购</string>
    <string name="text_home_popular">爆款热门</string>
    <string name="text_sign_receive">签到积分</string>
    <string name="text_free_goods">9.9包邮</string>
    <string name="text_china_taoism">养生百科</string>
    <string name="text_life_hacks">生活小常识</string>
    <string name="text_setting">设置</string>
    <string name="text_faq">常见问题</string>
    <string name="text_user_agreement">用户协议</string>
    <string name="text_feedback">意见反馈</string>
    <string name="text_appraise">给我们好评吧</string>
    <string name="text_version_update">版本更新</string>
    <string name="text_clear_cache">清除缓存</string>
    <string name="text_login_out">退出登录</string>
    <string name="text_to_appraise">喜欢数字绿州？去好评</string>
    <string name="text_to_complaint">体验差，我要吐槽</string>
    <string name="text_feedback_tips">请提出您的宝贵建议，我们将不断优化您的体验</string>
    <string name="text_service_agreement">服务协议</string>
    <string name="text_privacy_policy">隐私协议</string>
    <string name="text_favourite">收藏夹</string>
    <string name="text_cart_goods_pay">结算</string>
    <string name="text_free_order">免单专区</string>
    <string name="text_creative_products">创意新品</string>
    <string name="text_whole_price">全网比价</string>
    <string name="text_brand_promotion">品牌大促</string>
    <string name="text_user_message">消息</string>
    <string name="text_personal_data">个人资料</string>
    <string name="text_subsidy">补贴专区</string>
    <string name="text_order_pay">订单</string>
    <string name="company_name">重庆保万方实业有限公司</string>
    <string name="text_cat_coupon">猫券</string>
    <string name="text_jd_couping">京券</string>
    <string name="babe">宝贝</string>
    <string name="detail">详情</string>
    <string name="evaluation">评价</string>
    <string name="recommend">推荐</string>
    <string name="rmb_symbol">券</string>
    <string name="rmb_symbol1">兑换券</string>
    <string name="goods_detail">产品详情</string>
    <string name="goods_salenum">产品销量</string>
    <string name="much_people_group">人拼团</string>
    <string name="group_buy_ing">人正在拼单，可直接参与</string>
    <string name="only_remain">仅剩</string>
    <string name="quota">个名额</string>
    <string name="behind_over">后结束</string>
    <string name="no_default_address">无默认地址</string>
    <string name="binding_token">绑定令牌</string>
    <string name="server_exception">服务异常</string>
    <string name="add_address">添加地址</string>
    <string name="save">保存</string>
    <string name="save_success">提交成功</string>
    <string name="select_address">选择收货地址</string>
    <string name="edit">编辑</string>
    <string name="index_page">首页</string>
    <string name="login">登录</string>
    <string name="store_detail">门店详情</string>
    <string name="manage">管理</string>
    <string name="address_manage">地址管理</string>
    <string name="reload">重新加载</string>
    <string name="shopcart">购物车</string>
    <string name="add_cart_success">加入购物车成功</string>
    <string name="add_collect_success">收藏成功</string>
    <string name="default_address">默认地址</string>
    <string name="set_default_address">设为默认地址</string>
    <string name="enter_store">进入店铺</string>
    <string name="all_brand">所有品牌</string>
    <string name="update_title">检测到新版本</string>
    <string name="do_update">更新</string>
    <string name="update_failed">未获得权限，更新失败</string>
    <string name="cancel">取消</string>
    <string name="store_hot_good">镇店爆款</string>
    <string name="brand_detail">品牌详情</string>
    <string name="force_permission">必须的权限</string>
    <string name="app_src">hs.apk</string>
    <string name="amount">合计:</string>
    <string name="select_all">全选</string>
    <string name="shop_cart_no_good">您的购物车空空如也，快去购物吧~</string>
    <string name="done">完成</string>
    <string name="add_into_collect">移入收藏夹</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="order_detail">订单详情</string>
    <string name="refund_order_detail">退款详情</string>
    <string name="set_success">设置成功</string>
    <string name="makeorder_success">下单成功</string>
    <string name="store_index">店铺主页</string>
    <string name="my_coupon">我的省券</string>
    <string name="text_apply_after_sale_detail">申请售后详情</string>
    <string name="evaluate_all">全部评论</string>
    <string name="prize_draw">省券抽奖</string>
    <string name="android_auto_update_dialog_title">发现新版本</string>
    <string name="android_auto_update_notify_ticker">发现新版本,点击进行升级</string>
    <string name="android_auto_update_notify_content">发现新版本,点击进行升级</string>
    <string name="android_auto_update_dialog_btn_download">立即下载</string>
    <string name="android_auto_update_dialog_btn_cancel">以后再说</string>
    <string name="android_auto_update_toast_no_new_update">已经是最新版本</string>
    <string name="android_auto_update_download_progress">正在下载:%1$d%%</string>
    <string name="android_auto_update_dialog_checking">正在检查版本</string>
</resources>
