<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/shop_cart_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y140"
        android:layout_alignParentBottom="true"
        android:background="@color/title_bar_bg_color"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/select_all_ll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_alignParentLeft="true"
            android:background="?android:attr/selectableItemBackground"
            android:paddingRight="@dimen/x20">
            <CheckBox
                android:id="@+id/shop_cart_bottom_selection"
                android:layout_width="@dimen/x42"
                android:layout_height="@dimen/y42"
                style="@style/customCheckBox"
                android:clickable="false"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/x30" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x20"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@+id/shop_cart_bottom_selection"
                android:text="@string/select_all"
                android:textColor="@color/exchange_reason"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/manage_ll"
            android:visibility="gone"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/add_collect_tt"
                android:layout_width="@dimen/x366"
                android:layout_height="match_parent"
                android:background="@color/orange"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:text="@string/add_into_collect"/>
            <TextView
                android:id="@+id/delete_tt"
                android:layout_width="@dimen/x366"
                android:layout_height="match_parent"
                android:background="@color/bg_red"
                android:text="@string/delete"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="15sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/pay_ll"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_alignParentRight="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/shop_cart_money"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/amount"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/shop_cart_money"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/x20"
                android:layout_marginLeft="@dimen/x20"
                android:layout_toLeftOf="@+id/shop_cart_pay"
                android:gravity="center"
                android:textStyle="bold"
                android:text="0"
                android:textColor="@color/orange"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/shop_cart_pay"
                android:layout_width="@dimen/x360"
                android:layout_height="match_parent"
                android:background="@color/orange"
                android:gravity="center"
                android:text="@string/text_cart_goods_pay"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>
