<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    >

    <RelativeLayout
        android:id="@id/title_bar_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/title_bar_bg_color">
        <TextView
            android:id="@id/title_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/title_bar_title_color"
            android:text="@string/text_cat_coupon"
            android:textSize="@dimen/title_bar_text_size"/>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/ll_cat_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/y22"
        android:paddingBottom="@dimen/y22"
        android:background="#E1E1E1">

        <ImageView
            android:id="@+id/search_to_catType"
            android:layout_width="@dimen/x80"
            android:layout_height="@dimen/y76"
            android:src="@drawable/tao_type_search"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/x30"
            android:layout_marginLeft="@dimen/x44"/>

        <LinearLayout
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y92"
            android:background="@drawable/shape_search_gray"
            android:orientation="horizontal"
            android:layout_toLeftOf="@id/search_to_catType"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_marginLeft="@dimen/x50">

            <ImageView
                android:layout_width="@dimen/x40"
                android:layout_height="@dimen/y40"
                android:scaleType="fitXY"
                android:src="@drawable/find_coupon2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/x30"
                android:textSize="15sp"
                android:text="@string/text_search_good"
                android:textColor="#666666"/>

        </LinearLayout>
    </RelativeLayout>

    <include layout="@layout/xrecycler_layout"/>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/reload_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/y140"
        >
        <ImageView
            android:id="@+id/noconnect_icon"
            android:layout_width="@dimen/x378"
            android:layout_height="@dimen/y300"
            android:src="@drawable/no_connect"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_below="@+id/noconnect_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/y50"
            android:id="@+id/noconnect_tt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_failed"/>
        <Button
            android:id="@+id/reload_button"
            android:text="@string/reload"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/y100"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/noconnect_tt"
            android:background="@drawable/reload_button_bg"
            android:layout_width="@dimen/x330"
            android:layout_height="@dimen/x90" />
    </RelativeLayout>

</LinearLayout>