<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="@dimen/y120">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <RelativeLayout
            android:id="@+id/goods_detail_babe_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/goods_detail_babe_iv"
                android:src="@drawable/location_icon"
                android:layout_width="@dimen/x25"
                android:visibility="gone"
                android:layout_height="@dimen/y34"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x67"/>
            <TextView
                android:id="@+id/goods_detail_babe_tt"
                android:text="@string/babe"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x102"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/goods_detail_evaluation_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/goods_detail_evaluation_iv"
                android:src="@drawable/location_icon"
                android:visibility="gone"
                android:layout_width="@dimen/x25"
                android:layout_height="@dimen/y34"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x67"/>
            <TextView
                android:id="@+id/goods_detail_evaluation_tt"
                android:text="@string/evaluation"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x102"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/goods_detail_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/goods_detail_iv"
                android:src="@drawable/location_icon"
                android:visibility="gone"
                android:layout_width="@dimen/x25"
                android:layout_height="@dimen/y34"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x67"/>
            <TextView
                android:id="@+id/goods_detail_tt"
                android:text="@string/detail"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x102"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/goods_detail_recommend_rl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/goods_detail_recommend_iv"
                android:src="@drawable/location_icon"
                android:visibility="gone"
                android:layout_width="@dimen/x25"
                android:layout_height="@dimen/y34"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x67"/>
            <TextView
                android:id="@+id/goods_detail_recommend_tt"
                android:text="@string/recommend"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x102"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/y1"
        android:background="@color/line_gray_color"/>
</LinearLayout>