<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.dajukeji.hs.com.qianlihu.hxsz.activity.mine.usersetting.agreement.AgreementActivity">

    <include layout="@layout/title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/agreement_service_agreement"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y140"
            android:paddingLeft="@dimen/x30"
            android:paddingRight="@dimen/x30"
            android:background="?android:attr/selectableItemBackground" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/text_service_agreement"
                android:textSize="16sp"
                android:textColor="@color/title_black_color"/>

            <ImageView
                android:layout_width="@dimen/x30"
                android:layout_height="@dimen/y40"
                android:src="@drawable/right_arrow"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/y1"
            android:background="@color/line_gray_color"
            android:layout_marginLeft="@dimen/x30"/>

        <RelativeLayout
            android:id="@+id/agreement_privacy_policy"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y140"
            android:paddingLeft="@dimen/x30"
            android:paddingRight="@dimen/x30"
            android:background="?android:attr/selectableItemBackground" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/text_privacy_policy"
                android:textSize="16sp"
                android:textColor="@color/title_black_color"/>

            <ImageView
                android:layout_width="@dimen/x30"
                android:layout_height="@dimen/y40"
                android:src="@drawable/right_arrow"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/y1"
            android:background="@color/line_gray_color" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/y68"
            android:text="@string/company_name"
            android:textColor="#666666"
            android:textSize="16sp"/>

    </RelativeLayout>

</LinearLayout>
