<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f7f7f7">

    <RelativeLayout
        android:id="@id/title_bar_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:background="@color/title_bar_bg_color">
        <TextView
            android:id="@id/title_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/title_bar_title_color"
            android:text="@string/text_jd_couping"
            android:textSize="@dimen/title_bar_text_size"/>

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ll_jd_find"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <com.dajukeji.hslz.view.tablayout.SelfAdaptionTabLayout
            android:id="@+id/jd_sliding_tabLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/sliding_tabLayout_height"
            android:layout_weight="1"
            app:tabSelectedTextColor="@color/theme_orange_color"
            app:tabTextColor="@color/black"
            app:tabIndicatorThickness="@dimen/y6"
            app:tabIndicatorColor="@color/theme_orange_color"
            app:bottomBorderThickness="1px"
            app:bottomBorderColor="#D1D1D1"
            />
        <LinearLayout
            android:id="@+id/ll_find_jd_list"
            android:layout_width="@dimen/x120"
            android:layout_height="match_parent"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal"
            >
            <View
                android:layout_width="@dimen/x3"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/y10"
                android:layout_marginBottom="@dimen/y10"
                android:background="@color/backgroundGray"
                />
            <ImageView
                android:layout_width="@dimen/x50"
                android:layout_height="@dimen/y50"
                android:layout_marginLeft="@dimen/x34"
                android:src="@drawable/find_coupon2"
                android:layout_gravity="center_vertical"
                />

        </LinearLayout>
    </LinearLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/jd_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </android.support.v4.view.ViewPager>

    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/reload_rl"
        android:layout_marginBottom="@dimen/y140"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/noconnect_icon"
            android:layout_width="@dimen/x378"
            android:layout_height="@dimen/y300"
            android:src="@drawable/no_connect"
            android:layout_centerInParent="true"/>
        <TextView
            android:layout_below="@+id/noconnect_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/y50"
            android:id="@+id/noconnect_tt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_failed"/>
        <Button
            android:id="@+id/reload_button"
            android:text="@string/reload"
            android:textColor="@color/white"
            android:layout_marginTop="@dimen/y100"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/noconnect_tt"
            android:background="@drawable/reload_button_bg"
            android:layout_width="@dimen/x330"
            android:layout_height="@dimen/x90" />
    </RelativeLayout>

</LinearLayout>
